Revert "fix(i18n): Auto update translations for PR #10964"
This reverts commit 68bd7eaac513c0667e88e55c2a82e4397de45867.

--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -1013,6 +1013,7 @@
     "name": "Name",
     "no_results": "No results",
     "none": "None",
+    "off": "Off",
     "open": "Open",
     "paste": "Paste",
     "placeholders": {
@@ -3985,7 +3986,6 @@
         "default": "default",
         "flex": "flex",
         "on_demand": "on demand",
-        "performance": "[to be translated]:性能",
         "priority": "priority",
         "tip": "Specifies the latency tier to use for processing the request",
         "title": "Service Tier"
