--- a/src/renderer/src/i18n/translate/el-gr.json
+++ b/src/renderer/src/i18n/translate/el-gr.json
@@ -1013,6 +1013,7 @@
     "name": "Όνομα",
     "no_results": "Δεν βρέθηκαν αποτελέσματα",
     "none": "Χωρίς",
+    "off": "Απενεργοποιημένο",
     "open": "Άνοιγμα",
     "paste": "Επικόλληση",
     "placeholders": {
@@ -3985,7 +3986,6 @@
         "default": "Προεπιλογή",
         "flex": "Εύκαμπτο",
         "on_demand": "κατά παραγγελία",
-        "performance": "Απόδοση",
         "priority": "προτεραιότητα",
         "tip": "Καθορίστε το επίπεδο καθυστέρησης που χρησιμοποιείται για την επεξεργασία των αιτημάτων",
         "title": "Επίπεδο υπηρεσίας"
