--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -1013,6 +1013,7 @@
     "name": "Имя",
     "no_results": "Результатов не найдено",
     "none": "без",
+    "off": "Выкл",
     "open": "Открыть",
     "paste": "Вставить",
     "placeholders": {
@@ -3985,7 +3986,6 @@
         "default": "По умолчанию",
         "flex": "Гибкий",
         "on_demand": "по требованию",
-        "performance": "производительность",
         "priority": "приоритет",
         "tip": "Указывает уровень задержки, который следует использовать для обработки запроса",
         "title": "Уровень сервиса"
