--- a/src/renderer/src/i18n/locales/zh-cn.json
+++ b/src/renderer/src/i18n/locales/zh-cn.json
@@ -1013,6 +1013,7 @@
     "name": "名称",
     "no_results": "无结果",
     "none": "无",
+    "off": "关闭",
     "open": "打开",
     "paste": "粘贴",
     "placeholders": {
@@ -3985,7 +3986,6 @@
         "default": "默认",
         "flex": "灵活",
         "on_demand": "按需",
-        "performance": "性能",
         "priority": "优先",
         "tip": "指定用于处理请求的延迟层级",
         "title": "服务层级"
