--- a/src/renderer/src/i18n/locales/zh-tw.json
+++ b/src/renderer/src/i18n/locales/zh-tw.json
@@ -1013,6 +1013,7 @@
     "name": "名稱",
     "no_results": "沒有結果",
     "none": "無",
+    "off": "關閉",
     "open": "開啟",
     "paste": "貼上",
     "placeholders": {
@@ -3985,7 +3986,6 @@
         "default": "預設",
         "flex": "彈性",
         "on_demand": "按需",
-        "performance": "效能",
         "priority": "優先",
         "tip": "指定用於處理請求的延遲層級",
         "title": "服務層級"
