--- a/src/renderer/src/i18n/locales/en-us.json
+++ b/src/renderer/src/i18n/locales/en-us.json
@@ -4615,6 +4615,7 @@
     "paintings": "Paintings",
     "settings": "Settings",
     "store": "Assistant Library",
+    "terminal": "Terminal",
     "translate": "Translate"
   },
   "trace": {
