--- a/src/renderer/src/i18n/translate/el-gr.json
+++ b/src/renderer/src/i18n/translate/el-gr.json
@@ -2584,15 +2584,14 @@
       },
       "description": "Ένα AI ασιστάντα που έχει σχεδιαστεί για δημιουργούς",
       "downloading": "Λήψη ενημερώσεων...",
+      "enterprise": {
+        "title": "Επιχείρηση"
+      },
       "feedback": {
         "button": "Σχόλια και Παρατηρήσεις",
         "title": "Αποστολή σχολίων"
       },
       "label": "Περί μας",
-      "license": {
-        "button": "Προβολή",
-        "title": "Licenses"
-      },
       "releases": {
         "button": "Προβολή",
         "title": "Ημερολόγιο Ενημερώσεων"
