--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -3336,6 +3336,10 @@
           "label": "Корзина",
           "placeholder": "Корзина, например: example"
         },
+        "bypassProxy": {
+          "help": "[to be translated]:When enabled, S3 requests bypass the application proxy to prevent data corruption during large file uploads. Recommended to keep enabled unless your S3 endpoint requires proxy access.",
+          "label": "[to be translated]:Bypass Proxy"
+        },
         "endpoint": {
           "label": "Конечная точка API",
           "placeholder": "https://s3.example.com"
@@ -4260,6 +4264,12 @@
       "aws-bedrock": {
         "access_key_id": "AWS Ключ доступа ID",
         "access_key_id_help": "Ваш AWS Ключ доступа ID для доступа к AWS Bedrock",
+        "api_key": "[to be translated]:Bedrock API Key",
+        "api_key_help": "[to be translated]:Your AWS Bedrock API Key for authentication",
+        "auth_type": "[to be translated]:Authentication Type",
+        "auth_type_api_key": "[to be translated]:Bedrock API Key",
+        "auth_type_help": "[to be translated]:Choose between IAM credentials or Bedrock API Key authentication",
+        "auth_type_iam": "[to be translated]:IAM Credentials",
         "description": "AWS Bedrock — это полное управляемое сервисное предложение для моделей, поддерживающее различные современные модели языка",
         "region": "AWS регион",
         "region_help": "Ваш регион AWS, например us-east-1",
