--- a/src/renderer/src/i18n/translate/ru-ru.json
+++ b/src/renderer/src/i18n/translate/ru-ru.json
@@ -1,6 +1,7 @@
 {
   "agent": {
     "add": {
+      "description": "[to be translated]:Handle complex tasks with various tools",
       "error": {
         "failed": "Не удалось добавить агента",
         "invalid_agent": "Недействительный агент"
@@ -547,7 +548,11 @@
   "chat": {
     "add": {
       "assistant": {
+        "description": "[to be translated]:Daily conversations and quick Q&A",
         "title": "Добавить ассистента"
+      },
+      "option": {
+        "title": "[to be translated]:Select Type"
       },
       "topic": {
         "title": "Новый топик"
